ver 0.21 (not yet released)
* protocol
  - "tagtypes" can be used to hide tags
  - "find" and "search" can sort

ver 0.20.5 (not yet released)
* tags
  - id3: fix memory leak on corrupt ID3 tags
* decoder
  - sidplay: don't require libsidutils when building with libsidplayfp
* mixer
  - alsa: fix crash bug

ver 0.20.4 (2017/02/01)
* input
  - nfs: fix freeze after reconnect
* output
  - sndio: work around a libroar C++ incompatibility
* workaround for GCC 4.9 "constexpr" bug
* fix FreeBSD build failure

ver 0.20.3 (2017/01/25)
* protocol
  - "playlistadd" creates new playlist if it does not exist, as documented
* database
  - proxy: fix error "terminate called after throwing ..."
  - proxy: make connect errors during startup non-fatal
* neighbor
  - upnp: fix premature expiry
* replay gain: don't reset ReplayGain levels when unpausing playback
* silence surround channels when converting from stereo
* use shortcuts such as "dsd64" in log messages

ver 0.20.2 (2017/01/15)
* input
  - alsa: fix crash bug
  - alsa: fix buffer overruns
* decoder
  - flac: add options "probesize" and "analyzeduration"
* resampler
  - libsamplerate: reset state after seeking
* output
  - fix static noise after changing to a different audio format
  - alsa: fix the DSD_U32 sample rate
  - alsa: fix the DSD_U32 byte order
  - alsa: support DSD_U16
  - recorder: fix error "Failed to create : No such file or directory"
* playlist
  - cue: fix skipping songs

ver 0.20.1 (2017/01/09)
* input
  - curl: fix crash bug
  - curl: fix freeze bug
* decoder
  - wavpack: fix crash bug
* storage
  - curl: new storage plugin for WebDAV (work in progress)
* mixer
  - alsa: normalize displayed volume according to human perception
* fix crash with volume_normalization enabled

ver 0.20 (2017/01/04)
* protocol
  - "commands" returns playlist commands only if playlist_directory configured
  - "search"/"find" have a "window" parameter
  - report song duration with milliseconds precision