@@ -2,6 +2,8 @@ ver 0.21 (not yet released)
 * protocol
   - "tagtypes" can be used to hide tags
   - "find" and "search" can sort
+* output
+  - alsa: non-blocking mode
 
 ver 0.20.5 (not yet released)
 * tags
